--- a/AngularMvcProject/App/View/Reports/ServiceReports.html
+++ b/AngularMvcProject/App/View/Reports/ServiceReports.html
@@ -40,7 +40,7 @@
 
     <header class="top">
         <div class="logo_section"> <a class="logo" href="#"></a><img src="../Content/Assets/images/logo.png" alt="Logo"></a> </div>
-        <h1>Customers</h1>
+        <h1>Reports</h1>
 
         <div class="pull-right movileViewList">
             <ul class="nav navbar-nav navbar-right ">
@@ -190,11 +190,40 @@
         </ul>
     </div>
     <div class="right_section" id="settings">
-        <div ng-controller="ServiceReportsController">
+        <div class="tabs_section" style="width: 100px;">
+            <ul class="nav nav-tab nav-stacked">
+                <li>
+                    <a ng-click="RedirecttoBuisnessReport()" title="Business" data-toggle="tab" class="cursorhand">
+                        <i class="setmore-icon-equalizer nav-icon-fsize"></i><br>
+                        BUISNESS
+                    </a>
+                </li>
+                <li >
+                    <a ng-click="RedirecttoResourceReport()" title="Resource" class="cursorhand" data-toggle="tab">
+                        <i class="setmore-icon-users2 nav-icon-fsize"></i><br>
+                        RESOURCE
+                    </a>
+                </li>
+                <li class="active">
+                    <a ng-click="RedirecttoServiceReport()" title="Service" class="cursorhand" data-toggle="tab">
+                        <i class="setmore-icon-truck nav-icon-fsize"></i><br>
+                        SERVICE
+                    </a>
+                </li>
+                <li id="paymentMainTab" style="">
+                    <a ng-click="RedirecttoCustomerReport()" title="Customer" data-toggle="tab" class="cursorhand">
+                        <i class="setmore-icon-cashier nav-icon-fsize"></i><br>
+                        CUSTOMER
+                    </a>
+                </li>
+
+            </ul>
+        </div>
+        <div ng-controller="ServiceReportsController" ng-init="init()">
             <div class="tab_section tab_section2">
                 <div class="container-fluid">
                     <div class="row">
-                        <div class="col-sm-3 col-md-2">
+                        <!--<div class="col-sm-3 col-md-2">
                             <div class="tab_list">
                                 <ul class="list-unstyled">
                                     <li> <a ng-click="RedirecttoBuisnessReport()" class="cursorhand" title="Business"> Business </a> </li>
@@ -203,11 +232,30 @@
                                     <li> <a ng-click="RedirecttoCustomerReport()" class="cursorhand" title="Customer"> Customer </a> </li>
                                 </ul>
                             </div>
-                        </div>
-                        <div class="col-sm-9 col-md-10">
+                        </div>-->
+                        <div class="col-sm-9 col-md-12">
                             <div class="right_tabcontent">
                                 <div class="business_content">
                                     <h3> Service Report </h3>
+                                    <!--<h3> Resource Report </h3>-->
+                                    <div class="gre_bg time_frame">
+                                        <div class="row">
+                                            <div class="col-sm-3 text-left">
+                                                <h4 class="resource_hd"> Service</h4>
+                                            </div>
+                                            <div class="col-sm-9 text-right resources_div">
+                                                <label class="all resources" for="timeframe_today">
+                                                    All Services
+                                                    <input type="checkbox" name="timeframe" value="AllService" id="" ng-model="checked" ng-click="GetAllServicesReport(checked)">
+                                                </label>
+                                                <select ng-disabled="allservicechecked" ng-model="SelectedService" ng-change="ServiceChange(SelectedService)">
+                                                    <option ng-repeat="item in ListofServices" value="{{item.Id}}">{{item.Service}}</option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                    </div>
+
+
                                     <div class="gre_bg time_frame margin_top20">
 
                                         <div class="row">
@@ -285,7 +333,7 @@
                                             </div>
                                         </div>
                                         <a ng-csv="ServiceReport" csv-label="true" filename="ServiceReports.csv"><i class="fa fa-cloud-download" aria-hidden="true"></i> Download as CSV </a>
-                                        <a ng-csv="ServiceReport" csv-label="true" filename="ServiceReports.csv">Show Results </a>
+                                        <!--<a ng-csv="ServiceReport" csv-label="true" filename="ServiceReports.csv">Show Results </a>-->
                                         <div class="clearfix"></div>
                                     </div>
                                     <div class="inner_busscontent">
@@ -308,14 +356,24 @@
                                                     </thead>
                                                     <tbody>
                                                         <tr ng-repeat="item in ServiceReport">
-                                                            <td>Washing Hair</td>
-                                                            <td>General</td>
-                                                            <td>{{item.Booking}}</td>
-                                                            <td>${{item.Revenue}}</td>
+                                                            <td>{{item.Service}}</td>
+                                                            <td>{{item.Category}}</td>
+                                                            <td>{{item.Booking}}</td>                                                            
+                                                            <td>{{item.Revenue}}</td>
                                                             <td>{{item.Cancellations}}</td>
-                                                            <td>{{item.CancellationRate}}%</td>
+                                                            <td>{{item.CancellationRate}}</td>
                                                         </tr>
+                                                        <tr></tr>
+                                                        <tr></tr>
                                                       
+                                                        <tr ng-if="ServiceReportsloader">
+                                                            <td></td>
+                                                            <td></td>
+                                                            <td></td>
+                                                            <td ><img src="/Content/Assets/images/ImpoliteLivelyGenet13.gif" /></td>                                                           
+                                                            <td></td>
+                                                            <td></td>
+                                                        </tr>
                                                     </tbody>
                                                 </table>
                                             </div>
